--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -13,9 +13,9 @@
     </div>
     <hr>
     <p id="para">
-        Welcome to animal tracker<br>
-        The platform that help rangers<br>
-        to be the best at what the do
+        Welcome to wildlife tracker<br>
+        The platform for rangers<br>
+        to be the best at their job
     </p>
 {{/partial}}
 {{> layout.hbs}}
